[package]
name = "youtube_clip_downloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
youtube_dl = {version = "0.10.0", features = ["reqwest", "tokio", "downloader-rustls-tls"] }
tokio = { version = "1", features = ["full"] }
calamine = { version = "0.25.0" }
serde = { version = "1.0.204" }
threadpool = {version = "1.8.1" }